refactored backend/frontend
